h4 changed to dt and spacing issue fixed.

--- a/src/pages/api-documentation/api.module.scss
+++ b/src/pages/api-documentation/api.module.scss
@@ -120,7 +120,7 @@ code.code {
   margin: 0;
 }
 
-.apiPageWrapper h4 {
+.apiPageWrapper dt {
   display: inline-block;
   font-size: 16px;
   color: #666666;
@@ -131,3 +131,4 @@ code.code {
 .apiPageWrapper div {
   margin-bottom: 16px;
 }
+
